added another checkbox to index.html

--- a/index.html
+++ b/index.html
@@ -13,8 +13,14 @@
 
     <ul>
       <li><a href="#Home">Home</a></li>
+
+
       <li><a href="#About Us">About Us</a></li>
+
+
       <li><a href="#Order">Order</a></li>
+
+
       <li><a href="#Gallery"></a>Gallery</li>
 
     </ul>
@@ -93,6 +99,14 @@
             <input type="checkbox" name="checkbox">Green Peppers<br><br><br>
 
             <button type="submit" value="send">Place Order</button><br><br>
+
+            <br><br><b>Crust</b><br><br>
+                    <input type="checkbox" name="checkbox">Chewy<br><br><br>
+                    <input type="checkbox" name="checkbox">Crunchy<br><br><br>
+                    <input type="checkbox" name="checkbox">Flat<br><br><br>
+
+                    <button type="submit" value="send">Place Order</button><br><br>
+
             </form>
           </div>
         </div>
