Removed navbar from index.html

--- a/index.html
+++ b/index.html
@@ -9,25 +9,8 @@
 </head>
 
 <body>
-  <nav>
-
-    <ul>
-      <li><a href="#Home">Home</a></li>
 
 
-      <li><a href="#About Us">About Us</a></li>
-
-
-      <li><a href="#Order">Order</a></li>
-
-
-      <li><a href="#Gallery"></a>Gallery</li>
-
-    </ul>
-
-  </nav>
-
-  <div id="Home">
     <div class="container-fluid">
       <div class="hed">
         <div class="row">
@@ -43,7 +26,7 @@
   </div>
 
 
-  <div id="About Us">
+  <div class="About">
     <div class="container">
       <div class="row">
         <div class="text-center">
