made name changes in the checkboxes

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-
+<!****************** Home ****************>
     <div class="container-fluid">
       <div class="hed">
         <div class="row">
@@ -25,7 +25,7 @@
     </div>
   </div>
 
-
+<!**************** About ***************>
   <div class="About">
     <div class="container">
       <div class="row">
@@ -40,7 +40,8 @@
   </div>
 
 
-  <div id="Order">
+<!************* Order *************>
+
     <div class="container">
       <div class="row">
         <div class="text-center">
@@ -49,13 +50,12 @@
 
           <div class="Address">
             <h3>Address</h3>
-            <input type="text" name="text" placeholder="Address Line 1" required><br><br><br>
-            <input type="text" name="text" placeholder="Address Line 2" required><br><br><br>
+            <input type="text" name="text" placeholder="Phone number" required><br><br><br>
             <input type="text" name="text" placeholder="City" required><br><br><br>
-            <input type="text" name="text" placeholder="State" required><br><br><br>
-            <input type="text" name="text" placeholder="Zip Code" required><br><br><br>
-
+            <input type="text" name="text" placeholder="County" required><br><br><br>
+            <input type="text" name="text" placeholder="Street" required><br><br><br>
           </div>
+
           <div class="Size">
             <h4>Size</h4>
             <select>
@@ -80,7 +80,6 @@
             <input type="checkbox" name="checkbox">Italian Sausage<br><br><br>
             <input type="checkbox" name="checkbox">Paneer and Onions<br><br><br>
             <input type="checkbox" name="checkbox">Green Peppers<br><br><br>
-
             <button type="submit" value="send">Place Order</button><br><br>
 
             <br><br><b>Crust</b><br><br>
@@ -97,7 +96,8 @@
     </div>
 
 
-    <div id="Gallery">
+  <!*********** Gallery **************>
+
       <div class="container-fluid" class="gallery">
         <h1 class="text-center">GALLERY</h1>
         <div class="card-deck text-center">
