increased background image size

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-<!****************** Home ****************>
+  <!****************** Home ****************>
     <div class="container-fluid">
       <div class="hed">
         <div class="row">
@@ -23,110 +23,111 @@
         </div>
       </div>
     </div>
-  </div>
-
-<!**************** About ***************>
-  <div class="About">
-    <div class="container">
-      <div class="row">
-        <div class="text-center">
-          <h1><strong>ABOUT US</strong></h1>
-          <p>At The Slice Guy, we all come to work every day beacause we want to create good food. Food that fits everyone's taste.</p>
-          <p><br>We use good quality ingredients which are fresh delivered to us every morning.<br></p>
-          <p><br>We translate the customer's need and the business goals into elegants and clean taste for your food palette.br</p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-
-<!************* Order *************>
-
-    <div class="container">
-      <div class="row">
-        <div class="text-center">
-          <h1>ORDER</h1>
-          <h2>Order your custom made pizza here :</h2>
-
-          <div class="Address">
-            <h3>Address</h3>
-            <input type="text" name="text" placeholder="Phone number" required><br><br><br>
-            <input type="text" name="text" placeholder="City" required><br><br><br>
-            <input type="text" name="text" placeholder="County" required><br><br><br>
-            <input type="text" name="text" placeholder="Street" required><br><br><br>
-          </div>
-
-          <div class="Size">
-            <h4>Size</h4>
-            <select>
-              <option value="12">
-                Small -Ksh 900
-              </option>
-              <option value="15">
-                Medium -Ksh 1200
-              </option>
-              <option value="6">
-                 Large-Ksh 1500
-
-              </option>
-              <option value="25">
-                Mega -Ksh 1800
-              </option>
-            </select>
-            <br><br><b>Ingredients</b><br><br>
-            <input type="checkbox" name="checkbox">Pepperoni<br><br><br>
-            <input type="checkbox" name="checkbox">Salami<br><br><br>
-            <input type="checkbox" name="checkbox">Bacon<br><br><br>
-            <input type="checkbox" name="checkbox">Italian Sausage<br><br><br>
-            <input type="checkbox" name="checkbox">Paneer and Onions<br><br><br>
-            <input type="checkbox" name="checkbox">Green Peppers<br><br><br>
-            <button type="submit" value="send">Place Order</button><br><br>
-
-            <br><br><b>Crust</b><br><br>
-                    <input type="checkbox" name="checkbox">Chewy<br><br><br>
-                    <input type="checkbox" name="checkbox">Crunchy<br><br><br>
-                    <input type="checkbox" name="checkbox">Flat<br><br><br>
-
-                    <button type="submit" value="send">Place Order</button><br><br>
-
-            </form>
-          </div>
-        </div>
-      </div>
     </div>
 
-
-  <!*********** Gallery **************>
-
-      <div class="container-fluid" class="gallery">
-        <h1 class="text-center">GALLERY</h1>
-        <div class="card-deck text-center">
-          <div class="card">
-            <img src="img/gal6.jpg" alt="">
-          </div>
-          <div class="card">
-            <img src="img/gal5.jpg" alt="">
-img/gal1.jpg
-          </div>
-          <div class="card">
-            <img src="img/gal1.jpg" alt="">
-
-          </div>
-
-          <div class="card">
-            <img src="img/gal2.jpg" alt="">
-          </div>
-
-          <div class="card">
-            <img src="img/gal3.jpg" alt="">
-          </div>
-
-          <div class="card">
-            <img src="img/gal4.jpg" alt="">
-          </div>
+    <!**************** About ***************>
+      <div class="About">
+        <div class="container">
+          <div class="row">
+            <div class="text-center">
+              <h1><strong>ABOUT US</strong></h1>
+              <p>At The Slice Guy, we all come to work every day beacause we want to create good food. Food that fits everyone's taste.</p>
+              <p><br>We use good quality ingredients which are fresh delivered to us every morning.<br></p>
+              <p><br>We translate the customer's need and the business goals into elegants and clean taste for your food palette.br</p>
+            </div>
           </div>
         </div>
       </div>
+
+
+      <!************* Order *************>
+        <div class="Order">
+          <div class="container">
+            <div class="row">
+              <div class="text-center">
+                <h1>ORDER</h1>
+                <h2>Order your custom made pizza here :</h2>
+
+                <div class="Address">
+                  <h3>Address</h3>
+                  <input type="text" name="text" placeholder="Phone number" required><br><br><br>
+                  <input type="text" name="text" placeholder="City" required><br><br><br>
+                  <input type="text" name="text" placeholder="County" required><br><br><br>
+                  <input type="text" name="text" placeholder="Street" required><br><br><br>
+                </div>
+
+                <div class="Size">
+                  <h4>Size</h4>
+                  <select>
+                    <option value="12">
+                      Small -Ksh 900
+                    </option>
+                    <option value="15">
+                      Medium -Ksh 1200
+                    </option>
+                    <option value="6">
+                      Large-Ksh 1500
+
+                    </option>
+                    <option value="25">
+                      Mega -Ksh 1800
+                    </option>
+                  </select>
+                  <br><br><b>Ingredients</b><br><br>
+                  <input type="checkbox" name="checkbox">Pepperoni<br><br><br>
+                  <input type="checkbox" name="checkbox">Salami<br><br><br>
+                  <input type="checkbox" name="checkbox">Bacon<br><br><br>
+                  <input type="checkbox" name="checkbox">Italian Sausage<br><br><br>
+                  <input type="checkbox" name="checkbox">Paneer and Onions<br><br><br>
+                  <input type="checkbox" name="checkbox">Green Peppers<br><br><br>
+                  <button type="submit" value="send">Place Order</button><br><br>
+
+                  <br><br><b>Crust</b><br><br>
+                  <input type="checkbox" name="checkbox">Chewy<br><br><br>
+                  <input type="checkbox" name="checkbox">Crunchy<br><br><br>
+                  <input type="checkbox" name="checkbox">Flat<br><br><br>
+
+                  <button type="submit" value="send">Place Order</button><br><br>
+
+                  </form>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+          <!*********** Gallery **************>
+
+            <div class="container-fluid" class="gallery">
+              <h1 class="text-center">GALLERY</h1>
+              <div class="card-deck text-center">
+                <div class="card">
+                  <img src="img/gal6.jpg" alt="">
+                </div>
+                <div class="card">
+                  <img src="img/gal5.jpg" alt="">
+                  img/gal1.jpg
+                </div>
+                <div class="card">
+                  <img src="img/gal1.jpg" alt="">
+
+                </div>
+
+                <div class="card">
+                  <img src="img/gal2.jpg" alt="">
+                </div>
+
+                <div class="card">
+                  <img src="img/gal3.jpg" alt="">
+                </div>
+
+                <div class="card">
+                  <img src="img/gal4.jpg" alt="">
+                </div>
+              </div>
+            </div>
+        </div>
 
 </body>
+
 </html>
