added images to the cards

--- a/index.html
+++ b/index.html
@@ -1,36 +1,43 @@
 <!DOCTYPE html>
-<html <head>
-<title>Slice Guy</title>
-<link rel="stylesheet" href="css/styles.css" type="text/css">
-<link rel="stylesheet" href="css/styles.css" type="text/css">
-<link rel="stylesheet" href="css/bootstrap.css" type="text/css">
-<script src="js/jquery-3.4.1.js" charset="utf-8"></script>
-<script src="js/scripts.js" charset="utf-8"></script>
+<html>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title> The Slice Guy</title>
+  <link rel="stylesheet" href="css/styles.css" type="text/css">
+  <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
+  <script src="js/scripts.js" charset="utf-8"></script>
 </head>
 
 <body>
 
   <!****************** Home ****************>
+
     <div class="container-fluid">
       <div class="hed">
         <div class="row">
           <div class="col-md-12 text center" class="first">
-            <h1><strong><span>WELCOME TO THE SLICE GUY PIZZA.</span></strong>"</h1>
-
-            <h2>The Slice Guy is a traditionally made pizza. The pizza is custom made for a customer with even the wildest commbinations.</h2>
+            <h1><strong><span>"WELCOME TO THE SLICE GUY PIZZA."</span></strong></h1>
+            <br><br>
+            <div id="nimo">
+              <p>The Slice Guy is a traditionally made pizza. The pizza is custom made for a customer with even the wildest commbinations.</p>
+            </div>
 
           </div>
         </div>
       </div>
     </div>
-    </div>
+
 
     <!**************** About ***************>
+
       <div class="About">
         <div class="container">
           <div class="row">
             <div class="text-center">
-              <h1><strong>ABOUT US</strong></h1>
+              <h2><strong>ABOUT US</strong></h2>
               <p>At The Slice Guy, we all come to work every day beacause we want to create good food. Food that fits everyone's taste.</p>
               <p><br>We use good quality ingredients which are fresh delivered to us every morning.<br></p>
               <p><br>We translate the customer's need and the business goals into elegants and clean taste for your food palette.br</p>
@@ -41,11 +48,12 @@
 
 
       <!************* Order *************>
+
         <div class="Order">
           <div class="container">
             <div class="row">
               <div class="text-center">
-                <h1>ORDER</h1>
+                <h3><strong>ORDER</strong></h3>
                 <h2>Order your custom made pizza here :</h2>
 
                 <div class="Address">
@@ -99,34 +107,39 @@
           <!*********** Gallery **************>
 
             <div class="container-fluid" class="gallery">
-              <h1 class="text-center">GALLERY</h1>
+              <h5 class="text-center">GALLERY</h5>
               <div class="card-deck text-center">
                 <div class="card">
-                  <img src="img/gal6.jpg" alt="">
+                  <img src="img/gal5.jpeg" alt="">
                 </div>
                 <div class="card">
-                  <img src="img/gal5.jpg" alt="">
-                  img/gal1.jpg
+                  <img src="img/gal1.jpeg" alt="">
                 </div>
                 <div class="card">
-                  <img src="img/gal1.jpg" alt="">
-
+                  <img src="img/gal6.jpeg" alt="">
                 </div>
 
+              <div class="card-deck text-center">
                 <div class="card">
-                  <img src="img/gal2.jpg" alt="">
-                </div>
-
-                <div class="card">
-                  <img src="img/gal3.jpg" alt="">
+                  <img src="img/gal2.jpeg" alt="">
                 </div>
 
                 <div class="card">
-                  <img src="img/gal4.jpg" alt="">
+                  <img src="img/gal8.jpeg" alt="">
                 </div>
               </div>
             </div>
         </div>
+
+        <!***************footer**************>
+
+          <footer>
+            <center>
+              &copy; Nimo Said 2019
+              <br>
+              <a href="">Terms Of Service</a>
+            </center>
+          </footer>
 
 </body>
 
