--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <link rel="stylesheet" href="css/styles.css" type="text/css">
   <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
   <script src="js/scripts.js" charset="utf-8"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js">
+  </script>
 </head>
 
 <body>
@@ -22,7 +24,7 @@
             <h1><strong><span>"WELCOME TO THE SLICE GUY PIZZA."</span></strong></h1>
             <br><br>
             <div id="nimo">
-              <p>The Slice Guy is a traditionally made pizza. The pizza is custom made for a customer with even the wildest commbinations.</p>
+              <p>The Slice Guy is a traditionally made pizza. The pizza is custom made for a customer with even the wildest combinations.</p>
             </div>
 
           </div>
@@ -38,8 +40,8 @@
           <div class="row">
             <div class="text-center">
               <h2><strong>ABOUT US</strong></h2>
-              <p>At The Slice Guy, we all come to work every day beacause we want to create good food. Food that fits everyone's taste.</p>
-              <p><br>We use good quality ingredients which are fresh delivered to us every morning.<br></p>
+              <p><br><br>At The Slice Guy, we all come to work every day beacause we want to create good food. Food that fits everyone's taste.</p>
+              <p><br>We use good quality ingredients which are fresh delivered to us every morning.<br><br></p>
               <p><br>We translate the customer's need and the business goals into elegants and clean taste for your food palette.br</p>
             </div>
           </div>
@@ -50,74 +52,97 @@
       <!************* Order *************>
 
         <div class="Order">
-          <div class="container">
-            <div class="row">
-              <div class="text-center">
-                <h3><strong>ORDER</strong></h3>
-                <h2>Order your custom made pizza here :</h2>
+          <div class="container specific">
+            <h1 class="text-center what">ORDER</h1>
+            <div class="row text-center">
+              <div class="col-md-4 main">
+                <h5>
+                  <strong>Order Here:</strong>
+                </h5>
+                <img class="click" id="click1" src="img/design_icon.png" class=" img-fluid">
+                <div class="hide" id="hide1">
+                  <div class="Address">
+                    <h3>Address</h3>
 
-                <div class="Address">
-                  <h3>Address</h3>
-                  <input type="text" name="text" placeholder="Phone number" required><br><br><br>
-                  <input type="text" name="text" placeholder="City" required><br><br><br>
-                  <input type="text" name="text" placeholder="County" required><br><br><br>
-                  <input type="text" name="text" placeholder="Street" required><br><br><br>
+                    <form>
+
+                      <input type="text" name="text" placeholder="Phone number" required><br><br><br>
+
+                      <input type="text" name="text" placeholder="County" required><br><br><br>
+
+                      <input type="text" name="text" placeholder="Street" required><br><br><br>
+
+                      <input type="text" name="text" placeholder="Road" required><br><br><br>
+
+                    </form>
+                  </div>
                 </div>
+              </div>
+              <div class="col-md-4 main">
+                <img class="click" id="click2" src="./img/dev_icon.png" class="show img-fluid">
+                <h5>
+                  <strong>Size</strong>
+                </h5>
+                <div class="hide" id="hide2">
+                  <div class="Size">
+                    <h4>Size</h4>
+                    <select>
+                      <option value="12">
+                        Small - Ksh 900
+                      </option>
+                      <option value="15">
+                        Medium - Ksh 1500
+                      </option>
+                      <option value="6">
+                        Large - Ksh 2500
 
-                <div class="Size">
-                  <h4>Size</h4>
-                  <select>
-                    <option value="12">
-                      Small -Ksh 900
-                    </option>
-                    <option value="15">
-                      Medium -Ksh 1200
-                    </option>
-                    <option value="6">
-                      Large-Ksh 1500
-
-                    </option>
-                    <option value="25">
-                      Mega -Ksh 1800
-                    </option>
-                  </select>
-                  <br><br><b>Ingredients</b><br><br>
-                  <input type="checkbox" name="checkbox">Pepperoni<br><br><br>
-                  <input type="checkbox" name="checkbox">Salami<br><br><br>
-                  <input type="checkbox" name="checkbox">Bacon<br><br><br>
-                  <input type="checkbox" name="checkbox">Italian Sausage<br><br><br>
-                  <input type="checkbox" name="checkbox">Paneer and Onions<br><br><br>
-                  <input type="checkbox" name="checkbox">Green Peppers<br><br><br>
-                  <button type="submit" value="send">Place Order</button><br><br>
-
-                  <br><br><b>Crust</b><br><br>
-                  <input type="checkbox" name="checkbox">Chewy<br><br><br>
-                  <input type="checkbox" name="checkbox">Crunchy<br><br><br>
-                  <input type="checkbox" name="checkbox">Flat<br><br><br>
-
-                  <button type="submit" value="send">Place Order</button><br><br>
-
-                  </form>
+                      </option>
+                      <option value="25">
+                        Mega - Ksh 3200
+                      </option>
+                    </select>
+                  </div>
+                </div>
+                <div class="col-md-4 main">
+                  <img class="click" id="click3" src="./img/product_icon.png" class="show img-fluid">
+                  <h5>
+                    <strong>TOPPINGS</strong>
+                  </h5>
+                  <div class="hide" id="hide3">
+                    <br><br><b>Ingredients</b><br><br>
+                    <input type="checkbox" name="checkbox">Pepperoni<br><br><br>
+                    <input type="checkbox" name="checkbox">Salami<br><br><br>
+                    <input type="checkbox" name="checkbox">Bacon<br><br><br>
+                    <input type="checkbox" name="checkbox">Italian Sausage<br><br><br>
+                    <input type="checkbox" name="checkbox">Paneer and Onions<br><br><br>
+                    <input type="checkbox" name="checkbox">Green Peppers<br><br><br>
+                    <br><br><b>Crust</b><br><br>
+                    <input type="checkbox" name="checkbox">Chewy<br><br><br>
+                    <input type="checkbox" name="checkbox">Crunchy<br><br><br>
+                    <input type="checkbox" name="checkbox">Flat<br><br><br>
+                    <button type="submit" value="send">Place Order</button><br><br>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
+        </div>
 
 
-          <!*********** Gallery **************>
+        <!*********** Gallery **************>
 
-            <div class="container-fluid" class="gallery">
-              <h5 class="text-center">GALLERY</h5>
-              <div class="card-deck text-center">
-                <div class="card">
-                  <img src="img/gal5.jpeg" alt="">
-                </div>
-                <div class="card">
-                  <img src="img/gal1.jpeg" alt="">
-                </div>
-                <div class="card">
-                  <img src="img/gal6.jpeg" alt="">
-                </div>
+          <div class="container-fluid" class="gallery">
+            <h5 class="text-center">GALLERY</h5>
+            <div class="card-deck text-center">
+              <div class="card">
+                <img src="img/gal5.jpeg" alt="">
+              </div>
+              <div class="card">
+                <img src="img/gal1.jpeg" alt="">
+              </div>
+              <div class="card">
+                <img src="img/gal6.jpeg" alt="">
+              </div>
 
               <div class="card-deck text-center">
                 <div class="card">
@@ -129,18 +154,20 @@
                 </div>
               </div>
             </div>
-        </div>
+          </div>
 
-        <!***************footer**************>
+          <!***************footer**************>
 
-          <footer>
-            <center>
-              &copy; Nimo Said 2019
-              <br>
-              <a href="">Terms Of Service</a>
-            </center>
-          </footer>
-
+            <footer>
+              <center>
+                &copy; Nimo Said 2019
+                <br>
+                <a href="">Terms Of Service</a>
+              </center>
+            </footer>
+              <script src="./javascript/script.js"></script>
+              <script src="./javascript/jquery-3.4.1.js"></script>
+              <script src="./javascript/bootstrap.js"></script>
 </body>
 
 </html>
