add changes in the index.html

--- a/index.html
+++ b/index.html
@@ -60,13 +60,12 @@
             <section>
                 <h2 class="header"><center>Best Pizza Ever!</center></h2><br>
                 <h4><center>Come and get some,homie.</center></h4><br>
-                <h3><center>Place Order</center></h3>
+                <h3><center>Place Order:</center></h3>
             </section>
             <section>
                 <div id=delivery>
-                    <form action ="pizzas.php" method="post">
+                    <form method="post">
                     <h4>Delivery</h4>
-
                     <input type="radio" name="radio">Delivery<br>
                     <input type ="radio" name="radio">Pickup
                 </div>
@@ -85,17 +84,17 @@
                     <h4>Size</h4>
                     <select>
                         <option value="12">
-                            12" -$13.456
+                            Small - Ksh 900
                         </option>
                         <option value="15">
-                            15" -$19.245
+                            Medium - Ksh 1500
                         </option>
                         <option value= "6">
-                            6" -$9.45
+                            Large - Ksh 2500
 
                         </option>
                         <option value="25">
-                            25" -$117.345
+                             Mega - Ksh 3200
                         </option>
                     </select>
                     <br><br><b>Ingredients</b><br><br>
