add changes in index.html

--- a/index.html
+++ b/index.html
@@ -71,11 +71,10 @@
                 </div>
                 <div class="Address">
                     <h3>Address</h3>
-                    <input type="text" name="text" placeholder="Address Line 1" required><br><br><br>
-                    <input type ="text" name="text" placeholder="Address Line 2" required><br><br><br>
-                    <input type ="text" name="text" placeholder="City" required><br><br><br>
-                    <input type ="text" name="text" placeholder="State" required><br><br><br>
-                    <input type ="text" name="text" placeholder="Zip Code" required><br><br><br>
+                    <input type="text" name="text" placeholder="Phone number" required><br><br><br>
+                    <input type ="text" name="text" placeholder="County" required><br><br><br>
+                    <input type ="text" name="text" placeholder="Street" required><br><br><br>
+                    <input type ="text" name="text" placeholder="Road" required><br><br><br>
 
 
 
