add changes in index.html

--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
                              Mega - Ksh 3200
                         </option>
                     </select>
+                    <p>(This includes toppings)</p>
                     <br><br><b>Ingredients</b><br><br>
                     <input type="checkbox" name="checkbox">Pepperoni<br><br><br>
                     <input type="checkbox" name="checkbox">Salami<br><br><br>
