add changes in index.html

--- a/index.html
+++ b/index.html
@@ -83,17 +83,17 @@
                     <h4>Size</h4>
                     <select>
                         <option value="12">
-                            Small - Ksh 900
+                            Small(12") - Ksh 900
                         </option>
                         <option value="15">
-                            Medium - Ksh 1500
+                            Medium(15") - Ksh 1500
                         </option>
-                        <option value= "6">
-                            Large - Ksh 2500
+                        <option value= "20">
+                            Large(20") - Ksh 2500
 
                         </option>
                         <option value="25">
-                             Mega - Ksh 3200
+                             Mega(25") - Ksh 3200
                         </option>
                     </select>
                     <p>(This includes toppings)</p>
