add changes in index.html

--- a/index.html
+++ b/index.html
@@ -51,69 +51,78 @@
 
       <!************* Order *************>
 
-      <div class="Order">
-        <div class="container">
-          <div class="row">
-            <div class="text-center">
-              <h2><strong>Order</strong></h2>
-              <main>
-            <section>
-                <h2 class="header"><center>Best Pizza Ever!</center></h2><br>
-                <h4><center>Come and get some,homie.</center></h4><br>
-                <h3><center>Place Order:</center></h3>
-            </section>
-            <section>
-                <div id=delivery>
-                    <form method="post">
-                    <h4>Delivery</h4>
-                    <input type="radio" name="radio">Delivery<br>
-                    <input type ="radio" name="radio">Pickup
-                </div>
-                <div class="Address">
-                    <h3>Address</h3>
-                    <input type="text" name="text" placeholder="Phone number" required><br><br><br>
-                    <input type ="text" name="text" placeholder="County" required><br><br><br>
-                    <input type ="text" name="text" placeholder="Street" required><br><br><br>
-                    <input type ="text" name="text" placeholder="Road" required><br><br><br>
+        <div class="Order">
+          <div class="container">
+            <div class="row">
+              <div class="text-center">
+                <h2><strong>Order</strong></h2>
+                <main>
+                  <section>
+                    <h2 class="header">
+                      <center>Best Pizza Ever!</center>
+                    </h2><br>
+                    <h4>
+                      <center>Come and get some,homie.</center>
+                    </h4><br>
+                    <h3>
+                      <center>Place Order:</center>
+                    </h3>
+                  </section>
+                  <section>
+                    <div id=delivery>
+                      <form method="post">
+                        <h4>Delivery</h4>
+                        <input type="radio" name="radio">Delivery<br>
+                        <input type="radio" name="radio">Pickup
+                    </div>
+                    <div class="Address">
+                      <h3>Address</h3>
+                      <input type="text" name="text" placeholder="Phone number" required><br><br><br>
+                      <input type="text" name="text" placeholder="County" required><br><br><br>
+                      <input type="text" name="text" placeholder="Street" required><br><br><br>
+                      <input type="text" name="text" placeholder="Road" required><br><br><br>
 
 
 
-                </div>
-                <div class="Size">
-                    <h4>Size</h4>
-                    <select>
+                    </div>
+                    <div class="Size">
+                      <h4>Size</h4>
+                      <select>
                         <option value="12">
-                            Small(12") - Ksh 900
+                          Small(12") - Ksh 900
                         </option>
                         <option value="15">
-                            Medium(15") - Ksh 1500
+                          Medium(15") - Ksh 1500
                         </option>
-                        <option value= "20">
-                            Large(20") - Ksh 2500
+                        <option value="20">
+                          Large(20") - Ksh 2500
 
                         </option>
                         <option value="25">
-                             Mega(25") - Ksh 3200
+                          Mega(25") - Ksh 3200
                         </option>
-                    </select>
-                    <p>(This includes toppings)</p>
-                    <br><br><b>Ingredients</b><br><br>
-                    <input type="checkbox" name="checkbox">Pepperoni<br><br><br>
-                    <input type="checkbox" name="checkbox">Salami<br><br><br>
-                    <input type="checkbox" name="checkbox">Bacon<br><br><br>
-                    <input type="checkbox" name="checkbox">Italian Sausage<br><br><br>
-                    <input type="checkbox" name="checkbox">Paneer and Onions<br><br><br>
-                    <input type="checkbox" name="checkbox">Green Peppers<br><br><br>
+                      </select>
+                      <p>(This includes toppings)</p>
+                      <div class="Ingredients">
+                        <br><br><b>Ingredients</b><br><br>
+                        <input type="checkbox" name="checkbox">Pepperoni<br><br><br>
+                        <input type="checkbox" name="checkbox">Salami<br><br><br>
+                        <input type="checkbox" name="checkbox">Bacon<br><br><br>
+                        <input type="checkbox" name="checkbox">Italian Sausage<br><br><br>
+                        <input type="checkbox" name="checkbox">Paneer and Onions<br><br><br>
+                        <input type="checkbox" name="checkbox">Green Peppers<br><br><br>
 
-                    <button type="submit" value="send">Place Order</button><br><br>
+
+                        <button type="submit" value="send">Place Order</button><br><br>
                         </form>
-                </div>
-            </section>
+                      </div>
+                    </div>
+                  </section>
 
+              </div>
             </div>
           </div>
         </div>
-      </div>
 
 
         <!*********** Gallery **************>
@@ -152,9 +161,9 @@
                 <a href="">Terms Of Service</a>
               </center>
             </footer>
-              <script src="./javascript/script.js"></script>
-              <script src="./javascript/jquery-3.4.1.js"></script>
-              <script src="./javascript/bootstrap.js"></script>
+            <script src="./javascript/script.js"></script>
+            <script src="./javascript/jquery-3.4.1.js"></script>
+            <script src="./javascript/bootstrap.js"></script>
 </body>
 
 </html>
