--- a/index.html
+++ b/index.html
@@ -70,19 +70,18 @@
                   </section>
                   <section>
                     <div id=delivery>
-                      <form method="post">
+                      <form  action="" method="post">
                         <h4>Delivery</h4>
                         <input type="radio" name="radio">Delivery<br>
                         <input type="radio" name="radio">Pickup
                     </div>
                     <div class="Address">
                       <h3>Address</h3>
-                      <input type="text" name="text" placeholder="Phone number" required><br><br><br>
+                      <input type="text" name id placeholder="Phone number" required><br><br><br>
                       <input type="text" name="text" placeholder="County" required><br><br><br>
                       <input type="text" name="text" placeholder="Street" required><br><br><br>
                       <input type="text" name="text" placeholder="Road" required><br><br><br>
-
-
+                  
 
                     </div>
                     <div class="Size">
