add changes in index.html

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               <h2><strong>ABOUT US</strong></h2>
               <p><br><br>At The Slice Guy, we all come to work every day beacause we want to create good food. Food that fits everyone's taste.</p>
               <p><br>We use good quality ingredients which are fresh delivered to us every morning.<br><br></p>
-              <p><br>We translate the customer's need and the business goals into elegants and clean taste for your food palette.br</p>
+              <p><br>We translate the customer's need and the business goals into elegants and clean taste for your food palette.</p>
             </div>
           </div>
         </div>
@@ -81,7 +81,7 @@
                       <input type="text" name="text" placeholder="County" required><br><br><br>
                       <input type="text" name="text" placeholder="Street" required><br><br><br>
                       <input type="text" name="text" placeholder="Road" required><br><br><br>
-                  
+
 
                     </div>
                     <div class="Size">
